Commit more CMS work
Just some example work for the project

--- a/tvdjango/cmsbase/templates/cmsbase/base.html
+++ b/tvdjango/cmsbase/templates/cmsbase/base.html
@@ -1,13 +1,21 @@
 {% load cms_tags sekizai_tags %}
+{% load menu_tags %}
 <html>
-  <head>
-      <title>{% page_attribute "page_title" %}</title>
-      {% render_block "css" %}
-  </head>
-  <body>
-      {% cms_toolbar %}
-      {% placeholder base_content %}
-      {% block base_content %}{% endblock %}
-      {% render_block "js" %}
-  </body>
+    <head>
+        <title>{% page_attribute "page_title" %}</title>
+        {% render_block "css" %}
+    </head>
+    <body>
+        {% cms_toolbar %}
+        <ul class="nav navbar-nav">
+            {% show_menu 0 1 100 100  %}
+        </ul>
+        {% placeholder base_content %}
+        {% block base_content %}{% endblock %}
+        {% render_block "js" %}
+        <footer>
+            {% static_placeholder 'footer' %}
+        </footer>
+
+    </body>
 </html>
